2006-09-03  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_mailbox.c, dbmail-message.c:
	fix typo
	* dbmail-message.c:
	do not truncate dbmail_headervalue.headervalue (closes #338)
	* dbmail-mailbox.c:
	plug the memleak in the sort code

2006-09-02  Paul J Stevens <paul@nfg.nl>

	* maintenance.c:
	issue warning when dbmail-util doesn't specify -y
	* check_dbmail_imapd.c, check_dbmail_mailbox.c, dbmail-mailbox.c, 
	  dbmail-mailbox.h, dbmailtypes.h:
	test and fix search/sort sequences with and without uid, but
	introduces a memleak.
	* check_dbmail_mailbox.c, misc.c:
	moved some tree testing into mailbox testcode
	* check_dbmail_mailbox.c, dbmail-mailbox.c, test-scripts/testsort.imap:
	fix dbmail_mailbox_get_set

2006-08-31  Aaron Stone  <aaron@serendipity.cx>

	* contrib/startup-scripts/gentoo:
	Unified startup script with conf.d configuration file.

2006-08-29  Aaron Stone  <aaron@serendipity.cx>

	* check_dbmail_imapd.c, dm_imaputil.h, dm_imaputil.c:
	Handle RFC 2822 address list group syntax more correctly (closes bug
	#386) and expanded test coverage of dbmail_imap_append_alist_as_plist.
	* modules/authsql.c, pipe.c, dbmail-message.c, dm_md5.c,
	dbmail-imapsession.c, misc.c:
	Silenced signedness warning (closes bug #397).
	* dm_imaputil.c:
	Added a default parameter to imap_append_header_as_string that allows
	us to specify that Content-Encoding should default to "7BIT" rather
	than NIL (closes bug #404).

2006-08-27  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, check_dbmail_misc.c, dbmail-imapsession.c, 
	  dbmail-imapsession.h:
	minor changes in dbmail_imap_session_mailbox_open and
	dbmail_imap_session_mailbox_get_idnr
	* debian/control:
	fix debian/control

2006-08-22  Aaron Stone  <aaron@serendipity.cx>

	* lmtp.c:
	Added ? and ' to validchars (closes bug #400).

2006-08-21  Aaron Stone  <aaron@serendipity.cx>

	* contrib/startup-scripts/ubuntu/dbmail:
	Added Ubuntu startup script mysteriously posted to the wiki.
