@@ -1,3 +1,8 @@
+2006-09-05  Paul J Stevens <paul@nfg.nl>
+
+	* db.c, dbmail-imapsession.c, imap4.c, imapcommands.c:
+	remove some spurious warnings and redundant calls to db_getmailbox
+
 2006-09-03  Paul J Stevens <paul@nfg.nl>
 
 	* check_dbmail_mailbox.c, dbmail-message.c:
